fixed menu position and some spilling errors

--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -1,6 +1,7 @@
 .portfolio{
   background: #210808;
   padding-bottom: 5em;
+  padding-top: 5em;
 }
 
 .portfolio .portfolio-header{
