--- a/src/Components/Services/service.css
+++ b/src/Components/Services/service.css
@@ -3,6 +3,7 @@
   color: #bbb;
   margin-top: -15px;
   padding-bottom: 5em;
+  padding-top: 5em;
 }
 .service-heading {
   margin: 15px 0;
