--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,6 @@ h6 {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-section {
-  padding: 0 0;
-  padding-top: 5em;
-}
-
 section h2.section-heading {
   font-size: 40px;
   margin-top: 0;
@@ -49,13 +44,6 @@ section h3.section-subheading {
   margin-bottom: 75px;
   text-transform: none;
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-@media (min-width: 768px) {
-  section {
-    padding: 0 0;
-    padding-top: 5em;
-  }
 }
 
 .team-member {
